--- a/index.html
+++ b/index.html
@@ -5,17 +5,32 @@
 		<meta charset="utf-8" />
 		<!-- OGP -->
 		<meta name="robots" content="max-image-preview:large" />
-		<meta property="og:url" content="ページのURL(URL)" />
+		<meta property="og:url" content="https://nCreateMembers.github.io" />
 		<!-- トップならwebsite、それ以外はarticle -->
-		<meta property="og:type" content="article" />
+		<meta property="og:type" content="website" />
 		<!-- titleの指定は任意 -->
 		<meta property="og:title" content="ページのタイトル(非URL)" />
 		<meta property="og:site_name" content="nCreateMembers.github.io" />
 		<meta property="og:image" content="埋め込み画像のパス(URL)" />
-		<meta property="og:description" content="Discordの“nCreateのクリエイターサーバー”の有志者で作り上げるウェブサイトです。" />
+		<meta property="og:description" content="このサイトはDiscordの“nCreateのクリエイターサーバー”の有志者で作り上げるウェブサイトです。
+ウェブサイト開発を通して幅広いコミュニティを作り上げていきたいと思います！
+こちら(https://discord.gg/KmPamQnese)までお気軽にお声がけください(ただし知人に限る)。" />
 		<!-- End OGP -->
 		<link rel="icon" type="image/png" href="/Images/favicon.png" />
-		<link rel="stylesheet" href="/index.css" />
-		<title>タイトル</title>
-		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
+		<link rel="stylesheet" href="/style.css" />
+		<title>nCreateホーム｜nCreateの有志者で作り上げるウェブサイト</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=5.0" />
 	</head>
+	<body>
+		<header>
+			<h1>ヘッダ</h1>
+		</header>
+		<div class="body">
+			<h1>nCreateのウェブサイト</h1>
+			<p>このサイトは、Discordの“nCreateのクリエイターサーバー”のウェブサイト開発の有志者で作り上げるウェブサイトです。<br>ウェブサイト開発の情報共有やなど、効率化を図るとともに一種のコミュニティを作り上げることを目的としています。<br>知人の方でウェブサイト作成に興味がある方は<a href="https://discord.gg/KmPamQnese">こちら</a>の“nCreateのクリエイターサーバー”にお越しください！</p>
+		</div>
+		<footer>
+			<h1>フッタ</h1>
+		</footer>
+	</body>
+</html>
