--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<!-- トップならwebsite、それ以外はarticle -->
 		<meta property="og:type" content="website" />
 		<!-- titleの指定は任意 -->
-		<meta property="og:title" content="ページのタイトル(非URL)" />
+		<meta property="og:title" content="nCreateホーム｜nCreateの有志者で作り上げるウェブサイト" />
 		<meta property="og:site_name" content="nCreateMembers.github.io" />
 		<meta property="og:image" content="埋め込み画像のパス(URL)" />
 		<meta property="og:description" content="このサイトはDiscordの“nCreateのクリエイターサーバー”の有志者で作り上げるウェブサイトです。
