--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 		<div class="body">
 			<h1>nCreateのウェブサイト</h1>
 			<p>このサイトは、Discordの“nCreateのクリエイターサーバー”のウェブサイト開発の有志者で作り上げるウェブサイトです。<br>ウェブサイト開発の情報共有やなど、効率化を図るとともに一種のコミュニティを作り上げることを目的としています。<br>知人の方でウェブサイト作成に興味がある方は<a href="https://discord.gg/KmPamQnese">こちら</a>の“nCreateのクリエイターサーバー”にお越しください！</p>
-		</div>
+		        <p>test nc2</p>
+                </div>
 		<footer>
 			<h1>フッタ</h1>
 		</footer>
